2013-10-29  Jun Yan  <jun.yan@uconn.edu>

	* First public release.
