@@ -1,16 +1,16 @@
 Package: smam
 Type: Package
 Title: Statistical Modeling of Animal Movements
-Version: 0.2-1
-Date: 2013-10-26
+Version: 0.2-2
+Date: 2013-11-4
 Author: Jun Yan <jun.yan@uconn.edu> and 
  Vladimir Pozdnyakov <vladimir.pozdnyakov@uconn.edu>
 Maintainer: Jun Yan <jun.yan@uconn.edu>
-Depends: Matrix
+Depends: R (>= 3.0.0), Matrix
 Description: Animal movement models including moving-resting process
  with embedded Brownian motion, Brownian motion with measurement error.
 License: GPL (>= 3.0)
-Packaged: 2013-10-29 19:32:22 UTC; jyan
+Packaged: 2013-11-04 10:58:18 UTC; jyan
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-10-29 22:29:42
+Date/Publication: 2013-11-04 14:11:39
