@@ -7,6 +7,7 @@ useDynLib(smam)
 export(fitBmme,
        rbmme)
 
+## Moving-Resting with embedded BM
 export(fitMovRes, rMovRes, cllk.m1,
        dtm, 
        dtr)
