@@ -1,3 +1,8 @@
+2013-11-04  Jun Yan  <jun.yan@uconn.edu>
+
+	* added Depends: R (>= 3.0.0).
+	* corrected double to void of C function pmr.
+
 2013-10-29  Jun Yan  <jun.yan@uconn.edu>
 
 	* First public release.
